# GarysGuide-Scraper

./: .env.do.template  .env.staging  .env.staging.template  .gitignore  .ssh.pub  CHANGELOG.md  Dockerfile  Dockerfile.mcp-staging  MCP_TRANSFORMATION_PLAN.md  README.md  UNCLE_BOB_REVIEW_BUNDLE.md  compose.cron.yml  deploy.sh  docker-compose.do.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
deploy/: k8s-cronjob.yaml
docs/: CROSS_REPO_RELEASE_GATE_MATRIX.md  MIDTERM_DISPATCH_STATUS.md  MIDTERM_IMMEDIATE_ACTION_LETTER.md  MIDTERM_OWNER_DISPATCH_MESSAGE.md  MIDTERM_RESPONSE_ARTIFACT_DELIVERY.md  MIDTERM_SPRINT20_21_HANDOFF.md  PHASE1_REMEDIATION_RESCORE_SUMMARY.md  PHASE2_EXECUTION_COMPLETE.md  PHASE2_HANDOFF_MESSAGE.md  PHASE2_READINESS_CHECKLIST.md  PYPACK_PHASE1_REMEDIATION_RESPONSE.md  PYPACK_PHASE3_CHECKPOINT_RESPONSE.md  PYPACK_PHASE4_FINAL_APPROVAL_RESPONSE.md  PYPACK_PHASE4_FINAL_DECISION.md  PYPACK_SLOT8_RESCORE_RESPONSE.md  PYPACK_VERIFICATION_ACTION_PLAN.md  RUNBOOK.md  SUBMISSION_CHECKLIST.md  TESTING_STRATEGY.md  TRACEABILITY.md
scripts/: build_review_bundle.sh  deploy_staging.sh  run_local_release_checks.sh  run_once_entrypoint.sh  smoke_mcp.sh  start-cron.sh  start_cron.sh  verify_build.sh  verify_db.sh
scripts/sql/: verify_schema.sql  verify_snapshot_counts.sql
sprints/: sprint_plan.md
sprints/active/: sprint_06_dip_protocols.md  sprint_20_mcp_security_and_rbac.md
sprints/complete/: sprint_07_srp_decompose_scraper.md  sprint_08_extract_small_functions.md  sprint_11_docker_single_process.md  sprint_12_event_completeness.md  sprint_13_db_deduplication.md  sprint_14_gemini_ai_tagging.md  sprint_15_rest_api.md  sprint_16_mcp_foundation_and_contracts.md  sprint_17_mcp_server_and_dispatch.md  sprint_18_mcp_docker_api_adapter.md  sprint_19_mcp_validation_and_schema_hardening.md
sprints/planned/: sprint_09_error_handling.md  sprint_10_test_boundaries_http_abstraction.md  sprint_21_mcp_chat_registry_optional.md  sprint_22_mcp_ci_quality_and_release.md
src/garys_nyc_events/: __init__.py  config.py  exceptions.py  filters.py  formatters.py  http.py  models.py  newsletter_parser.py  protocols.py  runner_once.py  scheduler.py  scraper.py  storage.py  tagger.py
src/garys_nyc_events/api/: app.py  auth.py  dependencies.py  schemas.py
src/garys_nyc_events/api/routers/: __init__.py  events.py  health.py  mcp.py  runs.py
src/garys_nyc_events/mcp/: __init__.py  server.py
src/garys_nyc_events/mcp/tools/: __init__.py  query_events.py
tests/: e2e_scenarios.py  http_doubles.py  test_api_unit.py  test_e2e_live.py  test_filter_unit.py  test_mcp_adapter_integration.py  test_mcp_adapter_unit.py  test_mcp_contract_integration.py  test_mcp_e2e.py  test_mcp_server_unit.py  test_mcp_validation_unit.py  test_newsletter_parser_unit.py  test_package_unit.py  test_protocols_unit.py  test_public_api_unit.py  test_scheduler_unit.py  test_scraper_integration.py  test_scraper_safe_integration.py  test_scraper_unit.py  test_srp_decompose_unit.py  test_storage_unit.py  test_tagger_unit.py
tests/fixtures/: sample_events_page.html  sample_newsletter.html
tests/fixtures/mcp_contract/: query_events_failure.json  query_events_input_minimal.json  query_events_success.json
