[tool.poetry]
name = "garys_nyc_events"
version = "0.1.0"
description = "A polite scraper for NYC tech events from GarysGuide"
authors = ["Your Name <your@email.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yourname/garys_nyc_events"
repository = "https://github.com/yourname/garys_nyc_events"
keywords = ["events", "nyc", "scraper", "garysguide", "beautifulsoup"]
include = ["LICENSE", "CHANGELOG.md"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
packages = [{ include = "garys_nyc_events", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
requests-mock = "^1.11.0"
twine = "^6.0.0"

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1"
markers = [
    "e2e: end-to-end tests (may hit network)",
]

testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
