[tool.poetry]
name = "garys_nyc_events"
version = "0.2.0"
description = "A polite scraper for NYC tech events from GarysGuide"
authors = ["Andrew Gardner"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/atg25/GarysGuide-Scraper"
repository = "https://github.com/atg25/GarysGuide-Scraper"
keywords = ["events", "nyc", "scraper", "garysguide", "beautifulsoup"]
include = ["LICENSE", "CHANGELOG.md"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
packages = [{ include = "garys_nyc_events", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
croniter = "^2.0.0"
python-dateutil = "^2.9.0"
fastapi = ">=0.110.0"
uvicorn = ">=0.28.0"
httpx = ">=0.27"
pydantic = ">=2.0"
modelcontextprotocol = "==1.0.0"

[tool.poetry.scripts]
garys-events-run-once = "garys_nyc_events.runner_once:main"
garys-events-validate-cron = "garys_nyc_events.scheduler:main"
garys-events-api = "garys_nyc_events.api.app:create_app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
twine = "^6.0.0"

[tool.poetry.group.ai.dependencies]
google-generativeai = "^0.8.0"

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1"
markers = [
    "e2e: end-to-end tests (may hit network)",
]

testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
follow_imports = "skip"
ignore_missing_imports = true
disable_error_code = ["arg-type", "dict-item", "operator", "truthy-function", "union-attr"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
